Add meta viewport tag so site is shown correctly on mobile

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -4,6 +4,7 @@ html
     title CSH Resume Review
     link(rel="stylesheet", href="https://themeswitcher.csh.rit.edu/api/get")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(content='initial-scale=1, width=device-width', name='viewport')
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-primary
       .container
